--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-
+upload_speed = 921600
 lib_deps = https://github.com/schinken/SimpleTimer.git
+            ArduinoJson
